# WebDOM

./: README.md  pyproject.toml  setup.py
tests/: test_extractor.py
webdom_extractor/: __init__.py  cli.py  config.py  document.py  extractor.py  formatters.py
